RESOLVED FIXED269584
[WebGPU] Crash in WebCore::GPUCanvasContextCocoa::prepareForDisplay
https://bugs.webkit.org/show_bug.cgi?id=269584
Summary [WebGPU] Crash in WebCore::GPUCanvasContextCocoa::prepareForDisplay
Mike Wyrzykowski
Reported 2024-02-16 09:21:24 PST
[WebGPU] Crash in WebCore::GPUCanvasContextCocoa::prepareForDisplay
Attachments
Mike Wyrzykowski
Comment 1 2024-02-16 09:21:37 PST
Mike Wyrzykowski
Comment 2 2024-02-16 09:24:01 PST
EWS
Comment 3 2024-02-16 12:13:35 PST
Committed 274864@main (87647c778231): <https://commits.webkit.org/274864@main> Reviewed commits have been landed. Closing PR #24625 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.