[WebGPU] Crash in WebCore::GPUCanvasContextCocoa::prepareForDisplay https://bugs.webkit.org/show_bug.cgi?id=269584 <radar://123018719>

Reviewed by Tadeu Zagallo.

Vector overflow crash reported, only visible index operator
inside the callback is this line.

* Source/WebCore/html/canvas/GPUCanvasContextCocoa.mm:
(WebCore::GPUCanvasContextCocoa::prepareForDisplay):

Canonical link: https://commits.webkit.org/274864@main